examples/errors/bad_expr.ign
<program>
  {print(2||3)}
</program>